<resources>
    <string name="app_name">Cat Concentrate</string>
    <string name="repeatingBackgroundContentDescription">Repeating Background</string>
    <string name="itemBackgroundContentDescription">Main Background</string>
    <string name="menuButtonContentDescription">Menu</string>
    <string name="giftButtonContentDescription">Gifts</string>
    <string name="cat1ContentDescription">Cat 1</string>
    <string name="cat2ContentDescription">Cat 2</string>
    <string name="cat3ContentDescription">Cat 3</string>
    <string name="cat4ContentDescription">Cat 4</string>
    <string name="catthewPictureContentDescription">Catthew Picture</string>
    <string name="catthewName">Catthew</string>
    <string name="catthewDescription">Washed up pianist</string>
</resources>
