<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".GiftsActivity" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/cat1_profile"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/cat1_profile"
            android:contentDescription="@string/catthewPictureContentDescription"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/cat1_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/catthewDescription"
            app:layout_constraintStart_toEndOf="@+id/cat1_profile"
            app:layout_constraintTop_toBottomOf="@+id/cat1_name" />

        <TextView
            android:id="@+id/cat1_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/catthewName"
            app:layout_constraintStart_toEndOf="@+id/cat1_profile"
            app:layout_constraintTop_toTopOf="@+id/cat1_profile" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>